cabal-version: 2.4
name: prim
homepage: https://github.com/daig/prim#readme
version: 0.1.0.9
category: Prelude
synopsis: An ergonomic but conservative interface to ghc-prim
description: 
      This library reorganizes @ghc-prim@ in a sane but conservative way 
  , without adding any fancy tricks like overloading or extra functions.
  It's meant as a foundation for low-level programming in haskell, as well as (eventually),
  a comprehensive home for documentation on ghc magic.

stability: cursed
bug-reports: https://github.com/daig/prim/issues
author: Dai
maintainer: dai@sodality.cc
copyright: 2020 Sodality
license: MIT

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/daig/prim


library 
  default-language: Haskell2010
  default-extensions: MagicHash, UnboxedTuples
                    , KindSignatures, PolyKinds, ConstraintKinds, TypeOperators, RankNTypes
                    , BlockArguments, UnicodeSyntax
                    , PatternSynonyms, ViewPatterns
                    , DataKinds, UnliftedNewtypes, GADTs
  hs-source-dirs: src
  other-modules: Prelude
  exposed-modules: Char , B, Type
                 , I, I.I64, I.I32, I.I16, I.I8, I.I8.Packed I.I16.Packed
                 , U, U.U64, U.U32, U.U16, U.U8, U.U8.Packed, U.U16.Packed
                 , F64, F32
                 , ST, IO, IO.STM
                 , P.Weak, P.Stable, P.Stable.Name, P.Byte
                 , P.Char8, P.Char
                 , P.I64, P.I32, P.I16, P.I8
                 , P.U64, P.U32, P.U16, P.U8
                 , P.F32, P.F64
                 , P.P.Byte, P.P.Stable
                 , P.Boxed, P.STM, P.Block
                 , Tuple
                 , Array.Small, Array.Boxed
                 , Array.Byte, Array.Byte.Pinned, Array.Byte.Unpinned
                 , Array.Char, Array.Char8
                 , Array.F32, Array.F64
                 , Array.I64, Array.I32, Array.I16, Array.I8
                 , Array.U64, Array.U32, Array.U16, Array.U8
                 , Array.Stable
                 , Array.Array, Array.Array.Byte, Array.Array.Array
                 , Thread
                 , Compact
                 , Proxy
                 , Coerce
                 , Exception, Exception.Mask
                 , Spark
                 , Enum
                 , Any, BCO
                 , RTS.Rep
                 , RTS.Block, Optimizer
                 , RTS.Prefetch.Any, RTS.Prefetch.P, RTS.Prefetch.Array, RTS.Prefetch.Array.M
                 , String, String.C, String.C.Latin, String.C.UTF8, String.List
                 , Nat
                 , Stock.Eq, Stock.Ord, Stock.Ord.Ordering
                 , Stock.Char, Stock.Double, Stock.Float, Stock.Int, Stock.Word, Stock.IO
                 , Syntax.ImplicitParam
                 , Maybe
                 , Magic
                 , Typeable
  build-depends: ghc-prim ^>= 0.6.1
