cabal-version: 2.4
name: prim
homepage: https://github.com/daig/prim#readme
version: 0.1.0.9
category: Prelude
synopsis: An ergonomic but conservative interface to ghc-prim
description: 
      This library reorganizes @ghc-prim@ in a sane but conservative way 
  , without adding any fancy tricks like overloading or extra functions.
  It's meant as a foundation for low-level programming in haskell, as well as (eventually),
  a comprehensive home for documentation on ghc magic.

stability: cursed
bug-reports: https://github.com/daig/prim/issues
author: Dai
maintainer: dai@sodality.cc
copyright: 2020 Sodality
license: MIT

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/daig/prim


library 
  default-language: Haskell2010
  default-extensions: MagicHash, UnboxedTuples
                    , KindSignatures, PolyKinds, ConstraintKinds, TypeOperators, RankNTypes
                    , BlockArguments, UnicodeSyntax
                    , PatternSynonyms, ViewPatterns
                    , DataKinds, UnliftedNewtypes, GADTs
                    , TypeSynonymInstances, TypeFamilies, DerivingStrategies
                    , StandaloneDeriving, GeneralizedNewtypeDeriving
                    , FlexibleInstances, MultiParamTypeClasses, AllowAmbiguousTypes
                    , TypeFamilyDependencies
                    , PostfixOperators

  hs-source-dirs: src
  other-modules: Prelude
  exposed-modules: Char , B, Type
                 , I, I64, I32, I16, I16.Packed, I8, I8.Packed
                 , U, U64, U32, U16, U16.Packed, U8, U8.Packed
                 , F64, F32
                 , IO, IO.STM
                 , P, P.Weak, P.Stable, P.Stable.Name
                 , P.Boxed, P.STM, P.Sync
                 , Tuple
                 , A.Small, A.Boxed
                 , A, A.Prim
                 , Array.Array, Array.Array.Byte, Array.Array.Array
                 , Thread
                 , Compact
                 , Proxy
                 , Coerce
                 , Exception, Exception.Mask
                 , Spark
                 , Enum
                 , Any, BCO
                 , RTS.Rep
                 , RTS.Block, Inline
                 , RTS.Prefetch.Any, RTS.Prefetch.P, RTS.Prefetch.Array, RTS.Prefetch.Array.M
                 , String, String.C, String.C.Latin, String.C.UTF8, String.List
                 , Nat
                 , Stock.Eq, Stock.Ord, Stock.Ord.Ordering
                 , Stock.Char, Stock.Double, Stock.Float, Stock.Int, Stock.Word, Stock.IO
                 , Syntax.ImplicitParam
                 , Maybe
                 , Typeable
                 , X
                 , Bits, Cmp
  build-depends: ghc-prim ^>= 0.6.1
